Update route
